<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DemoForm</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_text">Welcome to Android App Development</string>
    <string name="first_name">First Name :</string>
    <string name="last_name">Last Name :</string>
    <string name="email">Email :</string>
    <string name="phone_number">Phone Number :</string>
    <string name="send">Send</string>
    <string name="reset">Clear</string>
    <string name="title_activity_display_form_data">DisplayFormData</string>
    <string name="hello_world">Hello world!</string>
    <string name="pic">capture photo</string>
    <string name="capture">capture</string>
    <string name="upload">upload</string>
    <string name="profilepic">User Profile picture</string>

</resources>
