<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainForm" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_text" />

    <TextView
        android:id="@+id/txt_firstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="36dp"
        android:text="@string/first_name" />

    <TextView
        android:id="@+id/txt_lastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_firstName"
        android:layout_marginTop="27dp"
        android:text="@string/last_name" />

    <TextView
        android:id="@+id/txt_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_lastName"
        android:layout_marginTop="26dp"
        android:text="@string/email" />

    <TextView
        android:id="@+id/txt_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_email"
        android:layout_marginTop="25dp"
        android:text="@string/phone_number" />

    <EditText
        android:id="@+id/etxt_firstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txt_firstName"
        android:layout_alignBottom="@+id/txt_firstName"
        android:layout_marginLeft="26dp"
        android:layout_toRightOf="@+id/txt_phone"
        android:ems="10"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/etxt_lastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txt_lastName"
        android:layout_alignBottom="@+id/txt_lastName"
        android:layout_alignLeft="@+id/etxt_firstName"
        android:ems="10"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etxt_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txt_email"
        android:layout_alignBottom="@+id/txt_email"
        android:layout_alignLeft="@+id/etxt_lastName"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/etxt_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txt_phone"
        android:layout_alignBottom="@+id/txt_phone"
        android:layout_alignLeft="@+id/etxt_email"
        android:ems="10"
        android:inputType="phone" />

    <Button
        android:id="@+id/send_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etxt_phone"
        android:layout_marginTop="25dp"
        android:onClick="clearData"
        android:text="@string/send" />

    <Button
        android:id="@+id/pic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/send_button"
        android:layout_marginTop="25dp"
        android:onClick="uploadPic"
        android:text="@string/pic" />

    <Button
        android:id="@+id/reset_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/pic"
        android:layout_toRightOf="@+id/pic"
        android:onClick="clearData"
        android:text="@string/reset" />

     <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:orientation="vertical"
          android:padding="10dp" >

         <ImageView
             android:id="@+id/viewImage"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:contentDescription="@string/profilepic"
             android:src="@drawable/ic_launcher" />
 
  </LinearLayout>

</RelativeLayout>